--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ footer p {
     margin-left: 210px;
 }
 
-/* @media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) {
 
 
     .main {
@@ -636,8 +636,8 @@ footer p {
     .step-6-2 {
         flex-direction: column;
     }
-} */
+}
 
 
 
-@media screen and (max-width: 1024px) {}
+/* @media screen and (max-width: 1024px) {} */
